Turning on JS strict option in debug builds, a/r=brendan, bug 50645